--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+.code-workspace
 
 # Local History for Visual Studio Code
 .history/
